A few styling bugs are repaired. The background picture on the login page now displays over the whole viewport on all browsers. The scroll bar in the desctiption column on the list page now displays in Firefox. It is a result of wrapping the description text into a <div> element and adding overflow: auto to it. One phrase was improved in the Polish translation file.

--- a/styles/list.css
+++ b/styles/list.css
@@ -483,6 +483,9 @@ td{
 	font-size: 30px;
 	overflow: auto;
 }
+.column3 div{
+	overflow: auto;
+}
 #description{
 	background-color: #CDFFCD;
 	width: 36vw;
